trying to solve hover on mobile

--- a/style.scss
+++ b/style.scss
@@ -84,13 +84,21 @@ body {
 
                 &:focus {
                     outline: none;
-                  }
-                @media (min-width: 500px) {
+                }
+
+                //   &:hover {
+                //     background-color: $color4;
+                // }
+                // @media (min-width: 500px) {
+                //     &:hover {
+                //         background-color: $color4;
+                //     }
+                // }
+                @media not all and (pointer: coarse) {
                     &:hover {
                         background-color: $color4;
                     }
                 }
-      
             
             }
             .correct {
